--- a/advanced/frontend/web/css/pages/wishlist.css
+++ b/advanced/frontend/web/css/pages/wishlist.css
@@ -53,8 +53,9 @@
     margin-left: auto;
     margin-right: auto;
 }
- #count-goods {
+.wrap-wishlist #count-goods {
     float: right;
+     margin-top: 35px;
 }
 /****************** Mobile *************************************/
 @media screen and (min-width: 480px) and (max-width: 768px) {
